# GameOfLife

./: .clang-format  .gitignore  CMakeLists.txt
src/: Cell.h  Config.h  Grid.cpp  Grid.h  Main.cpp
